Fix bugs with selected card email text color & conditionally add a scrollbar on right panel if screen is too small

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   --user-hover-bg: #e8e8e8;
   --input-border-color: #ececec;
   --label-color: grey;
+  --email-selected-text: #679acc;
   --cancel-btn-bg: #f7f7f7;
   --cancel-btn-bg-hover: #dedede;
   --save-btn-bg: #1b68b3;
